# ClownMapEd

./: .gitignore  .gitmodules  CMakeLists.txt  ClownMapEd.rc  README.md  TODO.md  about.cpp  about.h  about.ui  colour-button.cpp  colour-button.h  data-stream.h  dynamic-pattern-load-cues.cpp  dynamic-pattern-load-cues.h  icon.qrc  libsonassmd.h  licence.cpp  licence.h  licence.ui  licences.cpp  licences.h  licences.ui  main-window.cpp  main-window.h  main-window.ui  main.cpp  makeAppImage.sh  palette-editor.cpp  palette-editor.h  palette.cpp  palette.h  pixmap-button.cpp  pixmap-button.h  read-stream.h  signal-wrapper.h  sprite-editor.cpp  sprite-editor.h  sprite-frame.cpp  sprite-frame.h  sprite-mappings-manager.cpp  (+21 more)
assets/: ClownMapEd.desktop  ClownMapEd.rc  com.clownacy.ClownMapEd.desktop
assets/icon/: generate.sh
scripts/AppImage/: .gitignore  makeAppImage.sh
scripts/Arch Linux PKGBUILD/: .gitignore  PKGBUILD
